Fix admin config

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: lindsoda/lindsoda.github.io
+  repo: lindsoda/lindsey-portfolio
   branch: main
   site_domain: lindseys-portfolio.netlify.com
 
