Add open graph meta tags

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: Lindsey Barnett
 email: lindseybarnett.work@gmail.com
 description: "Hello! I am a Communication Design student at the University of Cincinnati. I am a sophomore, and I am extremely passionate about my studies. Right now, I hope to learn more about different aspects of the design field through my future co-op placements. Outside of school, I have two cats that I spend time with, and I love playing the violin."
+url: https://lindsey-barnett.com
 
 # Footer settings
 footer:
