--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,16 +4,16 @@ backend:
   branch: main
   site_domain: lindseys-portfolio.netlify.com
 
-media_folder: "/img/uploads"
+media_folder: "/img"
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
+  - name: "posts" # Used in routes, e.g., /admin/collections/blog
+    label: "Project" # Used in the UI
     folder: "_posts/" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Tags", name: "tags", widget: "list"}
+      - {label: "Banner", name: "banner", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
