Undelete the media_folder from root

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,6 +4,7 @@ backend:
   branch: main
   site_domain: lindseys-portfolio.netlify.com
 
+media_folder: /img/uploads
 
 collections:
   - name: "posts" # Used in routes, e.g., /admin/collections/blog
